remove /user/me endpoints, frontend always uses /user/{id}
